# wBI_calculator

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  network.xlsx  quotas.xlsx  results.xlsx  wbi_indices.h
cpp/: CMakeLists.txt
cpp/include/: CsvService.h  FileProcessor.h  GraphData.h  IFileConverter.h  WbiCalculator.h  WbiResult.h
cpp/src/: CsvService.cpp  FileProcessor.cpp  LibreOfficeConverter.cpp  PythonConverter.cpp  WbiCalculator.cpp  main.cpp
include/: CsvService.h  FileProcessor.h  GraphData.h  LibreOfficeConverter.h  PowerShellConverter.h  PythonConverter.h  WbiCalculator.h  file_processor.h  wbi_indices.h
src/: CsvService.cpp  FileProcessor.cpp  PowerShellConverter.cpp  WbiCalculator.cpp  main.cpp  wbi_incides.cpp
ui/: converter.py  cpp_runner.py  main.py  main_window.py  paths.py  pipeline.py  pytest.ini  settings.py  translator.py
ui/tests/: conftest.py  test_tc01_tc03_converter.py  test_tc04_tc09_main_window.py  test_tc10_tc12_pipeline.py  test_tc13_tc15_translator.py  test_tc16_tc17_start_button.py
